build_output_5.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preBusinessDebugBuild UP-TO-DATE
> Task :app:mergeBusinessDebugNativeDebugMetadata NO-SOURCE
> Task :app:compileBusinessDebugAidl UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:dataBindingMergeDependencyArtifactsBusinessDebug UP-TO-DATE
> Task :app:generateBusinessDebugMaterialThemeBuilderRes
> Task :app:generateBusinessDebugResValues UP-TO-DATE
> Task :app:generateBusinessDebugResources UP-TO-DATE
> Task :app:mergeBusinessDebugResources UP-TO-DATE
> Task :app:packageBusinessDebugResources UP-TO-DATE
> Task :app:processBusinessDebugNavigationResources UP-TO-DATE
> Task :app:parseBusinessDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesBusinessDebug UP-TO-DATE
> Task :app:generateBusinessDebugBuildConfig UP-TO-DATE
> Task :app:generateBusinessDebugMaterialThemeBuilderSource
> Task :app:checkBusinessDebugAarMetadata UP-TO-DATE
> Task :app:compileBusinessDebugNavigationResources UP-TO-DATE
> Task :app:mapBusinessDebugSourceSetPaths UP-TO-DATE
> Task :app:createBusinessDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksBusinessDebug UP-TO-DATE
> Task :app:processBusinessDebugMainManifest UP-TO-DATE
> Task :app:processBusinessDebugManifest UP-TO-DATE
> Task :app:processBusinessDebugManifestForPackage UP-TO-DATE
> Task :app:processBusinessDebugResources UP-TO-DATE
> Task :app:compileBusinessDebugKotlin NO-SOURCE
> Task :app:preBusinessReleaseBuild UP-TO-DATE
> Task :app:preWhatsappDebugBuild UP-TO-DATE
> Task :app:preWhatsappReleaseBuild UP-TO-DATE
> Task :app:javaPreCompileBusinessDebug UP-TO-DATE
> Task :app:mergeBusinessDebugShaders UP-TO-DATE
> Task :app:compileBusinessDebugShaders NO-SOURCE
> Task :app:generateBusinessDebugAssets UP-TO-DATE
> Task :app:mergeBusinessDebugAssets UP-TO-DATE
> Task :app:compressBusinessDebugAssets UP-TO-DATE
> Task :app:desugarBusinessDebugFileDependencies UP-TO-DATE
> Task :app:checkBusinessDebugDuplicateClasses UP-TO-DATE
> Task :app:mergeExtDexBusinessDebug UP-TO-DATE
> Task :app:mergeLibDexBusinessDebug UP-TO-DATE
> Task :app:mergeBusinessDebugJniLibFolders UP-TO-DATE
> Task :app:mergeBusinessDebugNativeLibs UP-TO-DATE
> Task :app:stripBusinessDebugDebugSymbols UP-TO-DATE
> Task :app:validateSigningBusinessDebug UP-TO-DATE
> Task :app:writeBusinessDebugAppMetadata UP-TO-DATE
> Task :app:writeBusinessDebugSigningConfigVersions UP-TO-DATE
> Task :app:mergeWhatsappDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsWhatsappDebug UP-TO-DATE
> Task :app:compileBusinessReleaseAidl
> Task :app:generateWhatsappDebugMaterialThemeBuilderRes
> Task :app:generateWhatsappDebugResValues UP-TO-DATE
> Task :app:generateWhatsappDebugResources UP-TO-DATE
> Task :app:mergeWhatsappDebugResources UP-TO-DATE
> Task :app:packageWhatsappDebugResources UP-TO-DATE
> Task :app:processWhatsappDebugNavigationResources UP-TO-DATE
> Task :app:parseWhatsappDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesWhatsappDebug UP-TO-DATE
> Task :app:generateWhatsappDebugBuildConfig UP-TO-DATE
> Task :app:generateWhatsappDebugMaterialThemeBuilderSource
> Task :app:checkWhatsappDebugAarMetadata UP-TO-DATE
> Task :app:compileWhatsappDebugNavigationResources UP-TO-DATE
> Task :app:mapWhatsappDebugSourceSetPaths UP-TO-DATE
> Task :app:createWhatsappDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:compileWhatsappDebugAidl
> Task :app:extractDeepLinksWhatsappDebug UP-TO-DATE
> Task :app:processWhatsappDebugMainManifest UP-TO-DATE
> Task :app:processWhatsappDebugManifest UP-TO-DATE
> Task :app:processWhatsappDebugManifestForPackage UP-TO-DATE
> Task :app:processWhatsappDebugResources UP-TO-DATE
> Task :app:compileWhatsappReleaseAidl
> Task :app:compileWhatsappDebugKotlin NO-SOURCE

> Task :app:fixAidlGeneratedJava
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\businessDebug\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\businessRelease\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\whatsappDebug\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched C:\Project\WaEnhancer\app\build\generated\aidl_source_output_dir\whatsappRelease\out\com\wmods\wppenhacer\xposed\bridge\WaeIIFace.java
fixAidlGeneratedJava: patched 4 file(s).

> Task :app:compileBusinessDebugJavaWithJavac
C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\AudioSpeedControl.java:62: error: Override is not a repeatable annotation type
            @Override
            ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

> Task :app:compileBusinessDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Project/WaEnhancer/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileBusinessDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Project\WaEnhancer\app\src\main\java\com\wmods\wppenhacer\xposed\features\others\AudioSpeedControl.java:62: error: Override is not a repeatable annotation type
              @Override
              ^
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 6s
60 actionable tasks: 9 executed, 51 up-to-date
